# cad

./: .gitignore  CMakeLists.txt  OpenGLWidget.h  README.md
src/app/: CMakeLists.txt  Camera.cpp  Camera.h  GL.h  OpenGLWidget.cpp  OpenGLWidget.h  README.md  ShaderProgram.cpp  ShaderProgram.h  main.cpp  quad.cpp  quad.h
src/app/shaders/: fragmentShader.frag  vertexShader.vert
src/app/src/: Camera.h  OpenGLWidget.cpp  OpenGLWidget.h  ShaderProgram.h  main.cpp  quad.cpp
src/cad/: CMakeLists.txt  README.md
src/cad/src/: OpenGLWidget.cpp  OpenGLWidget.h  camera.cpp  camera.h  cameraFactory.cpp  cameraFactory.hpp  checkMacros.hpp  geometryFactory.cpp  geometryFactory.h  gl.cpp  main.cpp  quad.cpp  quad.h  renderSystem.cpp  renderSystem.h  scene.cpp  scene.h  shaderProgram.cpp  shaderProgram.h
src/cad/src/camera/: ICameraStrategy.hpp  cadCameraStrategy.cpp  cadCameraStrategy.hpp  projectionCameraStrategy.cpp  projectionCameraStrategy.hpp
src/cad/src/components/: camera.cpp  camera.hpp  geometry.cpp  geometry.h  material.h  transform.cpp  transform.h
src/cad/src/entities/: entity.h
src/cad/src/gui/: ComponentWidget.cpp  ComponentWidget.h  EntityPropertiesWidget.cpp  EntityPropertiesWidget.h  SceneHierarchyWidget.cpp  SceneHierarchyWidget.h  TorusWidget.cpp  TorusWidget.h  TransformWidget.cpp  TransformWidget.h  cameraWidget.cpp  cameraWidget.hpp
src/cad_math/: CMakeLists.txt
src/cad_math/include/cad_math/: common.h  helpers.h  mat3.h  mat4.h  mat_base.h  math.h  ray4.h  vec2.h  vec2i.h  vec3.h  vec3i.h  vec4.h  vec_base.h
src/cad_math/src/: math.cpp
src/common/: CMakeLists.txt
src/common/include/common/: DoubleSlider.h
src/common/src/: DoubleSlider.cpp
src/ellipse/: CMakeLists.txt  README.md
src/ellipse/src/: GL.cpp  OpenGLWidget.cpp  OpenGLWidget.h  camera.cpp  camera.h  main.cpp  quad.h  shaderProgram.cpp  shaderProgram.h
tests/: CMakeLists.txt  test_math.cpp
